<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:layout_width="410dp"
        android:layout_height="67dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="46dp"
        android:gravity="center"
        android:text="@string/language_choice"
        android:textSize="20sp"
        android:id="@+id/choose_lang_string"/>

    <LinearLayout
        android:layout_height="40dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="120dp">
        <Button
            android:layout_height="match_parent"
            android:id="@+id/kotlin_button"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/language_button"
            android:text="Kotlin"
            />
        <Button
            android:layout_height="match_parent"
            android:id="@+id/python_button"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:text="python"
            android:background="@drawable/language_button"
            />
        <Button
            android:layout_height="match_parent"
            android:id="@+id/cplusplus_button"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:text="C++"
            android:background="@drawable/language_button"
            />
        <Button
            android:layout_height="match_parent"
            android:id="@+id/java_button"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:text="Java"
            android:background="@drawable/language_button"
            />
        <Button
            android:layout_height="match_parent"
            android:id="@+id/R_button"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:text="R"
            android:background="@drawable/language_button"
            />
    </LinearLayout>

    <EditText
        android:id="@+id/edit_search"
        android:layout_width="wrap_content"
        android:layout_height="57dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="83dp"
        android:layout_marginTop="220dp"
        android:baselineAligned="false"
        android:hint="@string/hint_search_string" />

    <Button
        android:id="@+id/btn_search"
        android:layout_width="207dp"
        android:layout_height="68dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="328dp"
        android:background="#673AB7"
        android:gravity="center"
        android:text="@string/button_search" />


</RelativeLayout>