<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

   <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/repoList"
       android:layout_width="match_parent"
       android:layout_height="match_parent" />
</FrameLayout>